--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -27,6 +27,10 @@
                     </div>
                 </div>
                 <div class="form-group">
+                  <label for="task-secret">Secret Code</label>
+                  <input type="text" ng-model="taskCompleted.secret" id="task-secret" class="form-control">
+                </div>
+                <div class="form-group">
                     <button type="button" ng-click="savePayout(taskCompleted)" class="btn btn-success">Pay this team!</button>
                 </div>
             </div>
