--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                   <label for="task-secret">Secret Code</label>
-                  <input type="text" ng-model="taskCompleted.secret" id="task-secret" class="form-control">
+                  <input type="password" ng-model="taskCompleted.secret" id="task-secret" class="form-control">
                 </div>
                 <div class="form-group">
                     <button type="button" ng-click="savePayout(taskCompleted)" class="btn btn-success">Pay this team!</button>
@@ -57,6 +57,10 @@
                         <div class="input-group-addon">£</div>
                         <input type="number" ng-model="costIncurred.value" placeholder="0.00" id="cost-value" class="form-control">
                     </div>
+                </div>
+                <div class="form-group">
+                  <label for="cost-secret">Secret Code</label>
+                  <input type="password" ng-model="costIncurred.secret" id="cost-secret" class="form-control">
                 </div>
                 <div class="form-group">
                     <button type="button" ng-click="saveCost(costIncurred)" class="btn btn-danger">Bill this team!</button>
