Adds JSON file for stories

--- a/app/views/stories.html
+++ b/app/views/stories.html
@@ -12,7 +12,7 @@
     <tbody>
       <tr>
         <th>S1</th>
-        <td>As a mentor I want to see the onboard LED flash so that I am confident the team can deploy working code to the Arduino</td>
+        <td>As a mentor I want to see the onboard LED flash so that I am confident the team can deploy working code to the Arduino.</td>
         <td>Given a working arduino when the code is deployed then the onboard LED flashes on for 1 second and off for 1 second.</td>
         <td>2</td>
       </tr>
@@ -31,7 +31,7 @@
       <tr>
         <th>S4</th>
         <td>As a robot I want to move forward for 1 seconds, pause for 1 second and reverse for 1 seconds so that I can display basic motor control</td>
-        <td>Given the code is deployed when the reset button is pressed the robot moves forwards for 1 seconds, stops for 1 second and reverses for 1 seconds repeatedly.</td>
+        <td>Given the code is deployed when the reset button is pressed the robot moves forwards for 1 seconds, stops for 1 second, reverses for 1 seconds and stops for one second repeatedly.</td>
         <td>5</td>
       </tr>
       <tr>
@@ -66,7 +66,7 @@
       </tr>
       <tr>
         <th>S10</th>
-        <td>As a robot I want to stop before I hit an obstable so that I do not get damaged</td>
+        <td>As a robot I want to stop before I hit an obstacle so that I do not get damaged</td>
         <td>Given the robot is moving forwards when it encounters an obstacle then it must stop, pause and turn 90 degrees left without hitting the obstabcle</td>
         <td>10</td>
       </tr>
@@ -93,81 +93,3 @@
   </table>
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
