--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -17,13 +17,19 @@
                 </div>
                 <div class="form-group">
                     <label for="task-description">Task title</label>
-                    <input type="text" ng-model="taskCompleted.description" id="task-description" class="form-control">
+                    <!-- <input type="text" ng-model="taskCompleted.description" id="task-description" class="form-control"> -->
+
+                    <select name="task-description" id="task-description" ng-model="taskCompleted.description"
+                            class="form-control" ng-change="updatePayout()">
+                      <option ng-repeat="story in stories" value="Story {{story.id.substr(1)}}">Story {{story.id.substr(1)}}</option>
+                    </select>
+
                 </div>
                 <div class="form-group">
                     <label for="task-payout">Payout</label>
                     <div class="input-group">
                         <div class="input-group-addon">£</div>
-                        <input type="number" ng-model="taskCompleted.value" placeholder="0.00" id="task-payout" class="form-control">
+                        <input type="number" ng-model="taskCompleted.value" placeholder="0.0" id="task-payout" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
