Minor stories update

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,8 +37,8 @@
           <thead>
             <tr>
               <th>Team Name</th>
-              <th>Current Munies</th>
-              <th>Current Story</th>
+              <th>Current Balance</th>
+              <th>Last Completed Story</th>
             </tr>
           </thead>
           <tbody>
