--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -5,7 +5,7 @@
         </p>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4>Task Completed!</h4>
@@ -17,7 +17,6 @@
                 </div>
                 <div class="form-group">
                     <label for="task-description">Task title</label>
-                    <!-- <input type="text" ng-model="taskCompleted.description" id="task-description" class="form-control"> -->
 
                     <select name="task-description" id="task-description" ng-model="taskCompleted.description"
                             class="form-control" ng-change="updatePayout()">
@@ -43,7 +42,7 @@
         </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="panel panel-danger">
             <div class="panel-heading">
                 <h4>Cost incurred!</h4>
@@ -70,6 +69,38 @@
                 </div>
                 <div class="form-group">
                     <button type="button" ng-click="saveCost(costIncurred)" class="btn btn-danger">Bill this team!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h4>Bonus earned!</h4>
+            </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="bonus-team">Team name</label>
+                    <select ng-model="bonus.team" id="bonus-team" ng-options="team as team.name for team in teams" class="form-control"></select>
+                </div>
+                <div class="form-group">
+                    <label for="bonus-description">Bonus Description</label>
+                    <input type="text" ng-model="bonus.description" id="bonus-description" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="task-payout">Payout</label>
+                    <div class="input-group">
+                        <div class="input-group-addon">£</div>
+                        <input type="number" ng-model="bonus.value" placeholder="0.0" id="bonus-payout" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                  <label for="bonus-secret">Secret Code</label>
+                  <input type="password" ng-model="bonus.secret" id="bonus-secret" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button type="button" ng-click="saveBonus(bonus)" class="btn btn-success">Pay this team!</button>
                 </div>
             </div>
         </div>
