--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -25,7 +25,7 @@
 
                 </div>
                 <div class="form-group">
-                    <label for="task-payout">Payout</label>
+                    <label for="task-payout">Value</label>
                     <div class="input-group">
                         <div class="input-group-addon">£</div>
                         <input type="number" ng-model="taskCompleted.value" placeholder="0.0" id="task-payout" class="form-control">
@@ -51,10 +51,6 @@
                 <div class="form-group">
                     <label for="cost-team">Team name</label>
                     <select ng-model="costIncurred.team" id="cost-team" ng-options="team as team.name for team in teams" class="form-control"></select>
-                </div>
-                <div class="form-group">
-                    <label for="cost-description">Brief description</label>
-                    <input type="text" ng-model="costIncurred.description" id="cost-description" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="cost-value">Cost amount</label>
@@ -85,11 +81,7 @@
                     <select ng-model="bonus.team" id="bonus-team" ng-options="team as team.name for team in teams" class="form-control"></select>
                 </div>
                 <div class="form-group">
-                    <label for="bonus-description">Bonus Description</label>
-                    <input type="text" ng-model="bonus.description" id="bonus-description" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="task-payout">Payout</label>
+                    <label for="task-payout">Value</label>
                     <div class="input-group">
                         <div class="input-group-addon">£</div>
                         <input type="number" ng-model="bonus.value" placeholder="0.0" id="bonus-payout" class="form-control">
@@ -105,6 +97,8 @@
             </div>
         </div>
     </div>
+  </div>
+  <div class="row">
 
     <div class="col-md-6">
         <div class="panel panel-info">
