--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -16,11 +16,11 @@
                     <select ng-model="taskCompleted.team" id="task-team" ng-options="team as team.name for team in teams" class="form-control"></select>
                 </div>
                 <div class="form-group">
-                    <label for="task-description">Task title</label>
+                    <label for="task-description">Story Number</label>
 
                     <select name="task-description" id="task-description" ng-model="taskCompleted.description"
                             class="form-control" ng-change="updatePayout()">
-                      <option ng-repeat="story in stories" value="Story {{story.id.substr(1)}}">Story {{story.id.substr(1)}}</option>
+                      <option ng-repeat="story in stories.missions[{{settings.stories}}]" value="Story {{story.id.substr(1)}}">Story {{story.id.substr(1)}}</option>
                     </select>
 
                 </div>
