--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
   <div class="col-md-5">
     <div class="panel-default panel">
       <div class="panel-heading">
-        <h4>Current Totals</h4>
+        <h4>Team Totals</h4>
       </div>
       <div class="panel-body">
         <canvas class="chart chart-bar" chart-data="teamTotals.data" chart-labels="teamTotals.labels" width="300" height="520"></canvas>
@@ -17,7 +17,7 @@
     <div class="panel panel-default">
 
       <div class="panel-heading">
-        <h4>All teams</h4>
+        <h4>Rise & Fall of Teams</h4>
       </div>
       <div class="panel-body">
         <highchart ng-if="graphsReady" id="chart1" config="highChart"></highchart>
