Adds current robot hire cost

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,6 +15,13 @@
     <div class="col-7">
       <mdb-card class="mb-3">
         <mdb-card-header class="cyan text-white">
+          <h4 class="mb-0">Current Robot Hire Cost: £{{ settings.robotHireCost }}</h4>
+        </mdb-card-header>
+      </mdb-card>
+
+    <div class="col-7">
+      <mdb-card class="mb-3">
+        <mdb-card-header class="cyan text-white">
           <h4 class="mb-0">Rise & Fall of Teams</h4>
         </mdb-card-header>
         <mdb-card-body>
