Authentication and Mission Lists

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,6 @@
 <p *ngIf="loading">Loading...</p>
 <div *ngIf="!loading">
+    {{mission.id}}
   <div class="row">
     <div class="col-5">
       <mdb-card class="mb-3">
