--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,24 @@
   </mdb-navbar-brand>
   <links>
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item" [ngClass]="{ 'active': router.url == '/' }">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="">Team Standings <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
-          </li>
-          <li class="nav-item" [ngClass]="{ 'active': router.url == '/admin' }">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="admin">Admin <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
-          </li>
-          <li class="nav-item" [ngClass]="{ 'active': router.url == '/stories' }">
-              <a class="nav-link waves-light" mdbWavesEffect routerLink="stories">Stories <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
-          </li>
+        <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/mission') }" *ngIf="!isActiveUrl('/')">
+            <a class="nav-link waves-light" mdbWavesEffect routerLink="">Team Standings <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
+        </li>
+        <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/admin') }" *ngIf="!isActiveUrl('/')">
+            <a class="nav-link waves-light" mdbWavesEffect routerLink="admin">Admin <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
+        </li>
+        <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/stories') }" *ngIf="!isActiveUrl('/')">
+            <a class="nav-link waves-light" mdbWavesEffect routerLink="stories">Stories <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
+        </li>
       </ul>
-      <a class="nav-link waves-light" [ngClass]="{ 'active': router.url == '/settings' }" mdbWavesEffect routerLink="settings"><i class="fa fa-cogs fa-lg white-text"></i></a>
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="!user">
+            <a class="nav-link waves-light" mdbWavesEffect (click)="login()"><i class="fa fa-user fa-lg white-text"></i> Login</a>
+        </li>
+        <li class="nav-item" *ngIf="user">
+            <a class="nav-link waves-light" mdbWavesEffect><img src="{{user.photoURL}}" width="30px" /> {{ user.displayName }}</a>
+        </li>
+      </ul>
   </links>
 </mdb-navbar>
 <div class="container">
