Fixing a couple of routing issues

--- a/src/app/stories/stories.component.html
+++ b/src/app/stories/stories.component.html
@@ -11,7 +11,7 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let story of stories[settings.stories]">
+      <tr *ngFor="let story of stories[mission.stories]">
         <th>{{story.id.toUpperCase()}}</th>
         <td>{{story.description}}</td>
         <td>{{story.acceptance}}</td>
