--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/mission') }" *ngIf="!isActiveUrl('/')">
             <a class="nav-link waves-light" mdbWavesEffect routerLink="">Overview <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
         </li>
-        <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/admin') }" *ngIf="!isActiveUrl('/')">
+        <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/teams') }" *ngIf="!isActiveUrl('/')">
             <a class="nav-link waves-light" mdbWavesEffect routerLink="teams">Teams <span class="sr-only" *ngIf="router.url == '/'">(current)</span></a>
         </li>
         <li class="nav-item" [ngClass]="{ 'active': isActiveUrl('/stories') }" *ngIf="!isActiveUrl('/')">
